stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/LPI_Demo_Scenario__c.object-meta.xml
<CustomObject>
    <label>LPI Demo Scenario</label>
    <nameField>
        <label>LPI Demo Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LPI Demo Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>