stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/fields/Demo_Script__c.field-meta.xml
<CustomField>
    <fullName>Demo_Script__c</fullName>
    <label>Demo Script</label>
    <type>Url</type>
</CustomField>