stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/fields/Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>Demo_Type__c</fullName>
    <label>Demo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LPI</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>