stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/fields/OmniScript__c.field-meta.xml
<CustomField>
    <fullName>OmniScript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OmniScript</label>
    <referenceTo>OmniProcess</referenceTo>
    <relationshipLabel>LPI Demo Scenarios</relationshipLabel>
    <relationshipName>LPI_Demo_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>