stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/fields/Personas__c.field-meta.xml
<CustomField>
    <fullName>Personas__c</fullName>
    <label>Personas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>