stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/fields/Secondary_Demo_Script__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Demo_Script__c</fullName>
    <label>Secondary Demo Script</label>
    <type>Url</type>
</CustomField>