stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Occupational</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>