stDemoOne/force-app/main/default/objects/LPI_Demo_Scenario__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Demo_Script__c</columns>
    <columns>OmniScript__c</columns>
    <columns>Personas__c</columns>
    <columns>Demo_Type__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>